# hask-category

./: README.md  flake.nix  hask-category.cabal
docs/: law1.tex
src/: Ex1.hs  Ex2.hs  Ex3.hs  Law1.hs  Powerset.hs
