cabal-version:      3.0
name:               hask-category
version:            0.1.0.0
build-type:         Simple

common warnings
    ghc-options: -Wall
    default-language: Haskell2010

library
    import:           warnings
    exposed-modules:
        Ex1
        Ex2
        Ex3
        Powerset
        Law1
    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   src

executable exe
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.16.4.0,
        hask-category
    hs-source-dirs:   app

test-suite tests
    import:           warnings
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.16.4.0,
        hask-category
